---------------------------------------------

	Migration to cvs.netbsd.org

2006-08-22  Emmanuel Dreyfus  <manu@netbsd.org>
	
	From Matthew Grooms:
	* src/racoon{cfparse.y|cftoken.l|isakmp_cfg.c|isakmp_cfg.h}
	  src/racoon{isdakmp_quick.c|isakmp_xauth.c|isakmp_xauth.h}
	  src/racoon/racoon.conf.5: Add a group check option

2006-08-17  Yvan Vanhullebus  <vanhu@netasq.com>

	Patch from Matthew Grooms:
	* src/racoon/ipsec_doi.c: fixed an ASN1 size in
	  ipsecdoi_checkid1()

2006-08-11  Yvan Vanhullebus  <vanhu@netasq.com>

	Patch from Matthew Grooms:
	* src/racoon/ipsec_doi.[ch]: fixed and public ipsecdoi_id2str()
	* src/racoon/isakmp_quick.c: text fix
	* src/racoon/pfkey.c: sainfo debug
	* src/racoon/sainfo.c: sainfo debug

2006-07-17  Yvan Vanhullebus  <vanhu@netasq.com>

	Reported by Matthew Grooms:
	* src/racoon/isakmp_quick.c: Fixed iph2->id / id_p checks in
	get_sainfo_r().
	* src/racoon/racoon.conf.5: updated man page for sainfo logic. 

2006-07-31  Emmanuel Dreyfus  <manu@netbsd.org>
	From Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/{cfparse.y|isakmp_cfg.c|isakmp_cfg.h}
	  src/racoon/{isakmp_unity.c|isakmp_unity.h}: splinet support
	  becomes dynamic, bugfixes 

2006-07-19  Emmanuel Dreyfus  <manu@netbsd.org>
	From Peter Eisch <peter@boku.net>
	* src/racoon/samples/roadwarrior/client/phase1-up.sh: add missing
	  netmask in network interface configuration

	From Matthew Grooms <mgrooms@shrew.net>
	* configure.ac src/racoon/isakmp_xauth.c: update the LDAP API usage

	From Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/{cfparse.y|cftoken.l|isakmp_cfg.c|isakmp_cfg.h}
	  src/racoon/{isakmp_cfg.c|isakmp_unity.c|racoon.conf.5}: Split DNS
	  support (server side)

2006-07-17  Yvan Vanhullebus  <vanhu@netasq.com>

	* src/libipsec/pfkey.c: Fixed SADB_X_EXT_SEC_CTX support in pfkey_align().
	  Break reported by Matthew Grooms.
	
2006-07-13  Frederic Senault  <fred@lacave.net>

	* src/racoon/isakmp_cfg.c: fix a typo that rendered DNS4 / WINS4